# llm_json_formatter

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  QUICKSTART_RELEASE.md  README.md  SKILL.md  test_data.json  test_map.json
.github/workflows/: release.yml  update-tap.yml
benches/: formatter_bench.rs
docs/: github-actions-setup.md  release.md  spec.md
examples/: check_sort.rs  pretty_demo.rs  token_compare.py
mcp-server/: README.md  package-lock.json  package.json
mcp-server/src/: index.ts
packaging/homebrew/: README.md  jf.rb
scripts/: package_release.sh
src/: lib.rs  main.rs
tests/: cli_tests.rs
